kubernetes/gemini-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: gemini-namespace1
  labels:
    name: gemini-namespace1
