kubernetes/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: gemini-namespace1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        # resources:
        #   limits:
        #     cpu: "500m"
        #     memory: "512Mi"
        #   requests:
        #     cpu: "200m"
        #     memory: "256Mi"
