kubernetes/gemini-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gemini-service
  namespace: gemini-ns
  labels:
    app: gemini
spec:
  type: LoadBalancer
  selector:
    app: gemini
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
      #nodePort: 30080
