kubernetes/gemini-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gemini-ingress
  namespace: gemini-namespace
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # Force HTTPS
    cert-manager.io/cluster-issuer: letsencrypt-prod  # Use Let's Encrypt
    nginx.ingress.kubernetes.io/proxy-set-headers: "ingress-headers"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: gemini_session
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
spec:
  tls:
  - hosts:
    - geminiapp.letsdeployit.com
    secretName: gemini-tls-secrets
  ingressClassName: nginx
  rules:
  - host: "geminiapp.letsdeployit.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gemini-service
            port:
              number: 3000
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
